[package]
name = "busyapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
mongodb = "2.6.0"
regex = "1.9.1"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.28"
serde = "1.0.183"
toml = "0.7.6"
derive_builder = "0.12.0"
